--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Gittraining Going</h1>
+      <h1 class="project-name">Gittraining Going Well</h1>
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/sergey25pr/gittraining" class="btn">View on GitHub</a>
       <a href="https://github.com/sergey25pr/gittraining/zipball/master" class="btn">Download .zip</a>
